--- a/part3/phonebook-api/package.json
+++ b/part3/phonebook-api/package.json
@@ -18,10 +18,10 @@
   "author": "jonatandb@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
   }
 }
-
