--- a/part3/phonebook/phonebook-api/package.json
+++ b/part3/phonebook/phonebook-api/package.json
@@ -18,6 +18,7 @@
   "author": "jonatandb@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "morgan": "^1.10.0"
   },
